--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -32,6 +32,7 @@
     width: 50%; /* Tamanho da largura*/
     height: 200px; /* Tamanho da altura*/
     border: 4px solid var(--cor-secundaria);
+    border-radius: 8px;
     margin: 2%; /* Tamanho da margem*/
 }
 
@@ -123,5 +124,18 @@ body{
  
     .apresentacao__conteudo{
        width: auto;
+    }
+
+    .imagens{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
+
+    }
+    
+    .imagem{
+        display: flex;
+        width: 80%;
+        height: 200px;
     }
  }
